Manifest/Arr/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
