Manifest/Arr/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: media-pod
  namespace: media-pod
spec: 
  nodeSelector:
    worker: "true"
  containers:
    - name: sabnzbd
      image: lscr.io/linuxserver/sabnzbd:latest
      ports:
        - containerPort: 8080
    - name: radarr
      image: lscr.io/linuxserver/radarr:latest
      ports:
        - containerPort: 7878
    - name: sonarr
      image: lscr.io/linuxserver/sonarr:latest
      ports:
        - containerPort: 8989
    - name: lidarr
      image: lscr.io/linuxserver/lidarr:latest
      ports:
        - containerPort: 8686
