Manifest/Arr/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: media-statefulset
spec:
  selector:
    matchLabels:
      app: media-pod
  replicas: 1
  serviceName: media-service
  template:
    metadata:
      labels:
        app: media-pod
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          ports:
            - containerPort: 8080
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
            - containerPort: 8686
# You can add more containers or modify these as needed
