Manifest/Arr/lidarr.yaml
# -- Lidarr --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: lidarr
          image: linuxserver/lidarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: "/music"
              readOnly: false
              name: smb-temp
              subPath: music
            - mountPath: "/Music"
              readOnly: false
              name: smb-media
              subPath: Music
      #          readinessProbe:
      #            httpGet:
      #              path: /
      #              port: 8686
      #            initialDelaySeconds: 10
      #            periodSeconds: 15
      #          livenessProbe:
      #            httpGet:
      #              path: /
      #              port: 8686
      #            initialDelaySeconds: 30
      #            periodSeconds: 30
      #          resources:
      #            requests:
      #              memory: "256Mi"
      #              cpu: "250m"
      #            limits:
      #              memory: "512Mi"
      #              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: smb-temp
          persistentVolumeClaim:
            claimName: pvc-arr-temp
        - name: smb-media
          persistentVolumeClaim:
            claimName: pvc-arr-media
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - name: web-tcp
      port: 8686
      protocol: TCP
      targetPort: 8686
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.lidarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: lidarr
          port: 8686
    - match: Host(`lidarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: lidarr
          port: 8686
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
