Manifest/Arr/radarr.yaml
# -- Radarr --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: radarr
          image: linuxserver/radarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: "/movies"
              readOnly: false
              name: smb-temp
              subPath: movies
            - mountPath: "/Movies"
              readOnly: false
              name: smb-media
              subPath: Movies
      #          readinessProbe:
      #            httpGet:
      #              path: /
      #              port: 7878
      #            initialDelaySeconds: 10
      #            periodSeconds: 15
      #          livenessProbe:
      #            httpGet:
      #              path: /
      #              port: 7878
      #            initialDelaySeconds: 30
      #            periodSeconds: 30
      #          resources:
      #            requests:
      #              memory: "256Mi"
      #              cpu: "250m"
      #            limits:
      #              memory: "512Mi"
      #              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: smb-temp
          persistentVolumeClaim:
            claimName: pvc-arr-temp
        - name: smb-media
          persistentVolumeClaim:
            claimName: pvc-arr-media
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - name: web-tcp
      port: 7878
      protocol: TCP
      targetPort: 7878
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.radarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: radarr
          port: 7878
    - match: Host(`radarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
