Manifest/Arr/sabnzbd.yaml
# -- SABnzbd --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: smb-temp
      #          readinessProbe:
      #            httpGet:
      #              path: /
      #              port: 8080
      #            initialDelaySeconds: 10
      #            periodSeconds: 15
      #          livenessProbe:
      #            httpGet:
      #              path: /
      #              port: 8080
      #            initialDelaySeconds: 30
      #            periodSeconds: 30
      #          resources:
      #            requests:
      #              memory: "256Mi"
      #              cpu: "100m"
      #            limits:
      #              memory: "512Mi"
      #              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: smb-temp
          persistentVolumeClaim:
            claimName: pvc-arr-temp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - name: web-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.sabnzbd.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
    - match: Host(`sabnzbd.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
