Manifest/Arr/sonarr.yaml
# -- Sonarr --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: sonarr
          image: linuxserver/sonarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: "/shows"
              readOnly: false
              name: smb-temp
              subPath: shows
            - mountPath: "/Shows"
              readOnly: false
              name: smb-media
              subPath: Shows
          readinessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: smb-temp
          persistentVolumeClaim:
            claimName: pvc-arr-temp
        - name: smb-media
          persistentVolumeClaim:
            claimName: pvc-arr-media
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - name: web-tcp
      port: 8989
      protocol: TCP
      targetPort: 8989
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.sonarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: sonarr
          port: 8989
    - match: Host(`sonarr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
